[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=2]

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 486, 221 )
z_index = 1

[node name="MeteorTimer" type="Timer" parent="."]

[node name="EnemyTimer" type="Timer" parent="."]
[connection signal="timeout" from="MeteorTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTimer_timeout"]
